[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/ui.gd" type="Script" id=1]
[ext_resource path="res://ui/components/game_menus/player_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/components/funds_box.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/components/game_menus/goods_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/components/status_blocks/status_blocks.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/components/game_menus/status_menu.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/components/game_menus/psi_menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/components/game_menus/equip_menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/components/text_box/text_box.tscn" type="PackedScene" id=9]

[node name="ui" type="CanvasLayer" groups=[
"ui",
]]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="player_menu" parent="." index="0" instance=ExtResource( 2 )]

margin_left = 9.0
margin_top = 7.0
margin_right = 129.0
margin_bottom = 71.0
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
_sections_unfolded = [ "Axis Stretch", "Margin", "Patch Margin", "Rect" ]

[node name="funds_box" parent="." index="1" instance=ExtResource( 3 )]

margin_left = 9.0
margin_top = 79.0
margin_right = 73.0
margin_bottom = 111.0

[node name="goods_menu" parent="." index="2" instance=ExtResource( 4 )]

visible = false
margin_left = 57.0
margin_top = 7.0
margin_right = 248.0
margin_bottom = 134.0

[node name="status_blocks" parent="." index="3" instance=ExtResource( 5 )]

margin_top = -74.0
margin_bottom = -10.0

[node name="status_menu" parent="." index="4" instance=ExtResource( 6 )]

visible = false

[node name="psi_menu" parent="." index="5" instance=ExtResource( 7 )]

visible = false
margin_top = 7.0
margin_bottom = 7.0

[node name="equip_menu" parent="." index="6" instance=ExtResource( 8 )]

margin_left = 9.0
margin_top = 7.0
margin_right = 49.0
margin_bottom = 47.0

[node name="text_box" parent="." index="7" instance=ExtResource( 9 )]

visible = false
margin_left = 96.0
margin_top = 7.0
margin_right = 248.0
margin_bottom = 71.0


